added test writer and debugged a bunch

--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,9 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>Blueberry Schema Parser</name>
   <description>An application to digest a BlueBerry protocol schema and generate code stubs for various languages.</description>
+  <properties>
+  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+</properties>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <resources>
