--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
     </plugins>
   </build>
   <dependencies>
+  <dependency>
+		<groupId>org.openjfx</groupId>
+		<artifactId>javafx-swing</artifactId>
+		<version>11-ea+19</version>
+	</dependency>
 	<dependency>
 	  <groupId>com.starfishmedical.sfdq</groupId>
 	  <artifactId>SfdqJavaApp</artifactId>
